# GeoWeaver

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
backend/: README.md
data/: README.md
data/catalogue/: README.md  demo_segments.geojson  seq_castnet_candidates_v0_1.geojson
data/conditions/: README.md  demo_conditions.json
data/research/: seq_candidate_research_notes_v0_1.md  seq_candidate_research_v0_1.csv  seq_candidate_research_v0_1.xlsx
data/templates/: field_observation.csv
data/travel/: README.md  demo_travel.json
data/trips/: README.md  demo_trip.json
docs/: 00_vision.md  01_architecture.md  02_database.md  03_data_sources.md  04_scoring_engine.md  05_roadmap.md  06_applications.md  07_research.md  08_backlog.md
docs/adr/: 0001-core-engine-first.md  0002-rule-based-before-ml.md  0003-geojson-for-mvp.md  0004-score-and-confidence-are-separate.md
frontend/: README.md
models/: README.md
notebooks/: README.md
scripts/: README.md
src/geoweaver/: __init__.py  cli.py  demo.py
src/geoweaver/data/: __init__.py  loader.py  run_inputs.py  validation.py
src/geoweaver/demo_data/: __init__.py  demo_conditions.json  demo_segments.geojson  demo_travel.json  demo_trip.json
src/geoweaver/domain/: __init__.py  enums.py  models.py
tests/: README.md  conftest.py  test_cli.py  test_constraints.py  test_loader.py  test_reports.py  test_run_inputs.py  test_scorer.py  test_validation.py
tests/fixtures/: castnet_v0_1_3_golden.json  castnet_v0_1_4_golden.json
(+9 files in other folders)
