[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "geoweaver"
version = "0.1.0"
description = "Offline, explainable spatial recommendation core"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "GeoWeaver contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.9,<1",
]

[project.scripts]
geoweaver = "geoweaver.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"geoweaver.demo_data" = ["*.json", "*.geojson"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
